Lomboked indentity module